toList changes